--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Dev Dish Food Truck & Restaurant</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar">
+            <div class="hero"><img src="./assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg" alt="two customers purchasing food from an illuminated at a food truck" height="200px"></div>        
+            <div class="nav-item"><a href="Menu">MENU</a></div>
+            <div class="nav-item"><a href="Hours">HOURS</a></div>
+            <div class="nav-item"><a href="About">ABOUT US</a></div>
+            <div class="nav-item"><a href="Locations">LOCATIONS</a></div>
+        </div>
+    </nav>
+
+</div>
     <h1>About Us</h1>
     <p>What's so great about combining the worlds of coding and cuisine? Dev Dish was founded by two passionate developers who turned their love for software into a culinary adventure. After years of coding by day and cooking by night, they decided to merge their two passions and create something extraordinary.</p>
     <P>Dev Dish brings a unique twist to the food truck scene, offering a menu full of creative, tech-inspired dishes. Whether you're a tech enthusiast or a food lover, our offerings are designed to satisfy both your appetite and your curiosity.</P>
