--- a/index.html
+++ b/index.html
@@ -3,24 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Dev Dish Food Truck & Restaurant</title>
+    <title>Food truck website</title>
 </head>
-<body>
+<body>+
+<div>
+    <h1>Dev Dish Food Truck & Restaurant</h1>
     <nav class="navbar">
         <div class="navbar">
-            <div class="hero"><img src="./assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg" alt="two customers purchasing food from an illuminated at a food truck" height="200px"></div>        
-            <div class="nav-item"><a href="Menu">MENU</a></div>
-            <div class="nav-item"><a href="Hours">HOURS</a></div>
-            <div class="nav-item"><a href="About">ABOUT US</a></div>
-            <div class="nav-item"><a href="Locations">LOCATIONS</a></div>
+            <div class="hero image"><img src="./assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg" alt="two customers purchasing food from an illuminated at a food truck" height="200px">
+                <img src="./assets/images/pexels-edwardeyer-1247755.jpg" alt="black guy prchasing two burgers from a food truck" height="200px">
+            </div>        
+            <div class="dev favorites"><a href="Menu">MENU</a></div>
+            <div class="hours"><a href="Hours">HOURS</a></div>
+            <div class="about us"><a href="About">ABOUT US</a></div>
+            <div class="locations"><a href="Locations">LOCATIONS</a></div>
         </div>
     </nav>
 
-</div>
-    <h1>About Us</h1>
+
+
+    <h2>About Us</h2>
     <p>What's so great about combining the worlds of coding and cuisine? Dev Dish was founded by two passionate developers who turned their love for software into a culinary adventure. After years of coding by day and cooking by night, they decided to merge their two passions and create something extraordinary.</p>
     <P>Dev Dish brings a unique twist to the food truck scene, offering a menu full of creative, tech-inspired dishes. Whether you're a tech enthusiast or a food lover, our offerings are designed to satisfy both your appetite and your curiosity.</P>
     <p>Dev Dish is the brainchild of Alex and Jamie, two friends who met at a hackathon and discovered a shared love for innovative cuisine. With a background in software development and a knack for culinary creativity, they embarked on a journey to deliver delicious, tech-themed dishes to the community.</p>
+</div>
+
+<div>
     <h2>The Dev Dish Quarterly Menu</h2>
+    <h2>Wraps</h2>
+    <ul>
+        <li>Function Fries</li>
+        <ul>
+            <li>Buffalo chicken, romaine lettuce, tomatoes, carrots, ranch, blue cheese</li>
+        <ul>    
+        <li>Loop Wrap</li>
+        <ul>
+            <li>Vegetarian. Hummus, romaine lettuce, sun-dried tomatoes, Kalamata olives, feta cheese, tzatziki sauce</li>
+        <ul>
+        <li>Stack Overflow</li>
+        <ul>
+            <li>Jalapeno tortilla, turkey chili, onions, cheddar cheese, avocado</li>
+        <ul>
+        <li>Recursive Roll</li>
+        <ul>
+            <li>Smoked salmon, cream cheese, cucumber, dill, and baby spinach</li>
+        <ul>
+        <li>Binary Bites</li>
+        <ul>
+            <li>Marinated pork, pickled carrots, cucumber, cilantro, mint, fresno chiles, mayonnaise</li>
+        <ul>
+        <li>Git Wrap</li>
+        <ul>
+            <li>Vegetarian. Falafel, red onion, romaine lettuce, tomato, and tzatziki sauce</li>
+        <ul>
+        <li>Note</li>
+        <ul>
+            <li>All wraps, except Stack Overflow are served on your choice of flour or corn tortilla.</li>
+        <ul>
+    </ul>
+    <h2>Sides</h2>
+        <ul>
+<ul>Bug-Free Fries</ul>
+<ul><li>Just a side of fries</li></ul>
+<ul>Three-Layer Cheese Fries</ul>
+<ul><li>Fries topped with havarti and dill cheese, pastrami, Russian dressing, pickled onions and peppers, pickled jalapeno</li></ul>
+<ul>Golden Ratio Fries</ul>
+<ul><li>Fries topped with havarti and dill cheese, pastrami, Russian dressing, pickled onions and peppers, pickled jalapeno</li></ul>
+<ul>Compile Chips</ul>
+<ul><li>Tortilla chips and salsa verde</li></ul>
+
+
+</ul>
+</div>
+
 </body>
 </html>
