--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 
 <h2>Hours:</h2>
 <ul>
-<li>Monday: 10am-7pm</li>
-<li>Tuesday: 10am-7pm</li>
-<li>Wednesday: 10am-7pm</li>
-<li>Thursday: 10am-10pm</li>
-<li>Friday: 10am-9pm</li>
-<li>Saturday: 12pm-11pm</li>
-<li>Sunday: 12pm-11pm</li>
+    <li><span class="day">Monday</span>: <span class="time">10:00am-7:00pm</span></li>
+    <li><span class="day">Tuesday</span>: <span class="time">10:00am-7:00pm</span></li>
+    <li><span class="day">Wednesday</span>: <span class="time">10:00am-7:00pm</span></li>
+    <li><span class="day">Thursday</span>: <span class="time">10:00am-10:00pm</span></li>
+    <li><span class="day">Friday</span>: <span class="time">10:00am-9:00pm</span></li>
+    <li><span class="day">Saturday</span>: <span class="time">12:00pm-11:00pm</span></li>
+    <li><span class="day">Sunday</span>: <span class="time">12:00pm-11pm</span></li>
 </ul>
 
 <footer>Social media icons:</footer>
