--- a/index.html
+++ b/index.html
@@ -42,31 +42,31 @@
                 <h3>Wraps</h3>
                 <ul>
                     <li>
-                        <strong>Function Fries</strong>
+                        <h4>Function Fries</h4>
                         <p>Buffalo chicken, romaine lettuce, tomatoes, carrots, ranch, blue cheese</p>
                     </li>
                     <li>
-                        <strong>Loop Wrap</strong> (Vegetarian)
+                        <h4>Loop Wrap (Vegetarian)</h4> 
                         <p>Hummus, romaine lettuce, sun-dried tomatoes, Kalamata olives, feta cheese, tzatziki sauce</p>
                     </li>
                     <li>
-                        <strong>Stack Overflow</strong>
+                        <h4>Stack Overflow</h4>
                         <p>Jalapeno tortilla, turkey chili, onions, cheddar cheese, avocado</p>
                     </li>
                     <li>
-                        <strong>Recursive Roll</strong>
+                        <h4>Recursive Roll</h4>
                         <p>Smoked salmon, cream cheese, cucumber, dill, and baby spinach</p>
                     </li>
                     <li>
-                        <strong>Binary Bites</strong>
+                        <h4>Binary Bites</h4>
                         <p>Marinated pork, pickled carrots, cucumber, cilantro, mint, fresno chiles, mayonnaise</p>
                     </li>
                     <li>
-                        <strong>Git Wrap</strong> (Vegetarian)
+                        <h4>Git Wrap (Vegetarian)</h4>
                         <p>Falafel, red onion, romaine lettuce, tomato, and tzatziki sauce</p>
                     </li>
                     <li>
-                        <strong>Note</strong>
+                        <h4>Note</h4>
                         <p>All wraps, except Stack Overflow, are served on your choice of flour or corn tortilla.</p>
                     </li>
                 </ul>
@@ -76,19 +76,19 @@
                 <h3>Sides</h3>
                 <ul>
                     <li>
-                        <strong>Bug-Free Fries</strong>
+                        <h4>Bug-Free Fries</h4>
                         <p>Just a side of fries</p>
                     </li>
                     <li>
-                        <strong>Three-Layer Cheese Fries</strong>
+                        <h4>Three-Layer Cheese Fries</h4>
                         <p>Fries topped with havarti and dill cheese, pastrami, Russian dressing, pickled onions and peppers, pickled jalapeno</p>
                     </li>
                     <li>
-                        <strong>Golden Ratio Fries</strong>
+                        <h4>Golden Ratio Fries</h4>
                         <p>Fries topped with havarti and dill cheese, pastrami, Russian dressing, pickled onions and peppers, pickled jalapeno</p>
                     </li>
                     <li>
-                        <strong>Compile Chips</strong>
+                        <h4>Compile Chips</h4>
                         <p>Tortilla chips and salsa verde</p>
                     </li>
                 </ul>
