added 3 new images to favorites section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <section aria-labelledby="favorites">
             <h2 id="favorites">The Developer's Favorites</h2>
             <p>Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6M5FdBodSI3hKCD1eKS2oIIz9LKOScGoIsg&s" alt="woman reecieving fries from a food truck" height="180px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeHSo9RcUlnRXLMyhFV8Zj52JEeG1wuwiZiQ&s" alt="a group of guys presenting their pizz burgers and fries together" height="180px">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIUaYVGgeOyRIGPULpd0UaH1_FmT2l52rVqw&s" alt="nachos covered in cheese sauce jalepeno and meat in a togo tray" height="180px">
         </section>
 
         <section aria-labelledby="location">
