revised containers and added on for gallery images

--- a/index.html
+++ b/index.html
@@ -140,10 +140,14 @@
             </ul>
         </div>
 
-        <p> ©2024 Titus Brooks. All rights reserved.
-
-            No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the author, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law. For permission requests, please contact the author directly.</p>
+        <p> ©2024 Titus Brooks. All rights reserved.</p>      
+        <p> 
+             No part of this publication may be reproduced, distributed, or transmitted in any form or by any means,
+             including photocopying, recording, or other electronic or mechanical methods, without the prior 
+             ritten permission of the author, except in the case of brief quotations embodied in critical reviews 
+             and certain other noncommercial uses permitted by copyright law. For permission requests, please contact 
+             the author directly.
+        </p>
     </footer>
-
 </body>
 </html>
